Add updated header.tex.

--- a/utils/header.tex
+++ b/utils/header.tex
@@ -1,3 +1,6 @@
+\documentclass[11pt, fleqn]{article}
+
+\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage[margin=1in]{geometry} % To set the margin widths
@@ -11,38 +14,26 @@
 \usepackage{subcaption}
 \usepackage{titlesec}
 \usepackage{bm}
-
-% \usepackage{hyperref}
-
-% \lstset{
-%   frame=top,frame=bottom,
-%   basicstyle=\small\normalfont\sffamily,    % the size of the fonts that are used for the code
-%   stepnumber=1,                           % the step between two line-numbers. If it is 1 each line will be numbered
-%   numbersep=10pt,                         % how far the line-numbers are from the code
-%   tabsize=2,                              % tab size in blank spaces
-%   extendedchars=true,                     %
-%   breaklines=true,                        % sets automatic line breaking
-%   captionpos=b,                           % sets the caption-position to top
-%   mathescape=true,
-%   stringstyle=\color{white}\ttfamily, % Farbe der String
-%   showspaces=false,           % Leerzeichen anzeigen ?
-%   showtabs=false,             % Tabs anzeigen ?
-%   xleftmargin=17pt,
-%   framexleftmargin=17pt,
-%   framexrightmargin=17pt,
-%   framexbottommargin=5pt,
-%   framextopmargin=5pt,
-%   showstringspaces=false      % Leerzeichen in Strings anzeigen ?
-% }
-
+\usepackage[titletoc,toc,title]{appendix}
 
 \lstset{
-  captionpos=b,
   frame=single,
+  basicstyle=\ttfamily,% print whole listing small
   language=R,
-  literate = {<-}{{$\gets$}}1 {~}{{$\sim$}}1
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  numbers=none,
+  commentstyle=\color{ForestGreen},
+  stringstyle=\color{Maroon},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=2,
+  literate={<-}{{$\gets$}}1 {~}{{$\sim$}}1
 }
 
 \sisetup{output-exponent-marker=\textsc{e}}
 
-\titleformat{\section}[block]{\bfseries}{\thesection}{1em}{}
+\setlength{\parskip}{12pt} % Sets a blank line in between paragraphs
+\setlength\parindent{0pt} % Sets the indent for each paragraph to zero
