tables + figures for logit and tree models

--- a/hw5/writeup/conmat_boost.tex
+++ b/hw5/writeup/conmat_boost.tex
@@ -2,8 +2,8 @@
 % Wed Nov  4 19:31:53 2015
 \begin{table}[ht]
 \centering
-\caption{Confusion Matrix for Multinomial Logit Regression} 
-\label{tab:conmat_dmr}
+\caption{Confusion Matrix for Boosting Tree} 
+\label{tab:conmat_boost}
 \begin{tabular}{l|rrrrrr}
   &\multicolumn{6}{c}{Reference}\\
  \hline
