--- a/hw5/writeup/conmat_rf.tex
+++ b/hw5/writeup/conmat_rf.tex
@@ -2,18 +2,18 @@
 % Wed Nov  4 19:31:53 2015
 \begin{table}[ht]
 \centering
-\caption{Confusion Matrix for Multinomial Logit Regression} 
-\label{tab:conmat_dmr}
+\caption{Confusion Matrix for Random Forest} 
+\label{tab:conmat_rf}
 \begin{tabular}{l|rrrrrr}
   &\multicolumn{6}{c}{Reference}\\
  \hline
 Predicted & Walking & WalkingUpstairs & WalkingDownstairs & Sitting & Standing & Laying \\ 
   \hline
-Walking & 496 &  32 &   4 &   0 &   0 &   0 \\ 
-  WalkingUpstairs &   0 & 437 &  12 &   2 &   0 &   0 \\ 
-  WalkingDownstairs &   0 &   2 & 404 &   0 &   0 &   0 \\ 
-  Sitting &   0 &   0 &   0 & 432 &  28 &   0 \\ 
-  Standing &   0 &   0 &   0 &  57 & 504 &   0 \\ 
+Walking & 481 &  26 &  20 &   0 &   0 &   0 \\ 
+  WalkingUpstairs &   5 & 439 &  47 &   0 &   0 &   0 \\ 
+  WalkingDownstairs &  10 &   6 & 353 &   0 &   0 &   0 \\ 
+  Sitting &   0 &   0 &   0 & 447 &  20 &   0 \\ 
+  Standing &   0 &   0 &   0 &  44 & 512 &   0 \\ 
   Laying &   0 &   0 &   0 &   0 &   0 & 537 \\ 
    \hline
 \end{tabular}
