Updates from ShareLaTeX

--- a/hw5/writeup/hw5.tex
+++ b/hw5/writeup/hw5.tex
@@ -17,6 +17,9 @@ We use a multinomial logistic regression, a random forest, and a boosting tree a
 
 \section{Neural Nets} \label{nnets}
 
+\input{nnet.tex}
+
+
 \clearpage
 \begin{appendices}
 \section{Code Listings}
