add lscape package to header

--- a/utils/header.tex
+++ b/utils/header.tex
@@ -13,6 +13,7 @@
 \usepackage[group-separator={,}]{siunitx}
 \usepackage{subcaption}
 \usepackage{titlesec}
+\usepackage{lscape}
 \usepackage{bm}
 \usepackage[titletoc,toc,title]{appendix}
 
