Updates from ShareLaTeX

--- a/hw5/writeup/hw5.tex
+++ b/hw5/writeup/hw5.tex
@@ -29,19 +29,19 @@ The optimal algorithm, again chosen by five-fold cross validation, used $\texttt
 \begin{figure}
   \centering
   \begin{subfigure}[b]{0.45\textwidth}
-    \caption{Lift Plot for Logit Models}
+    \caption{Confusion Matrix Heatmap: Multinomial Logit}
     \includegraphics[width=\textwidth]{heatmap_dmr.pdf}
     \label{fig:lift_lin}
   \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.45\textwidth}
-    \caption{Lift Plot for Random Forest}
+    \caption{Confusion Matrix Heatmap: Random Forest}
     \includegraphics[width=\textwidth]{heatmap_rf.pdf}
     \label{fig:lift_rf}
   \end{subfigure}
   \hfill
     \begin{subfigure}[b]{0.45\textwidth}
-    \caption{Lift Plot for Boosting Tree}
+    \caption{Confusion Matrix Heatmap: Boosting Tree}
     \includegraphics[width=\textwidth]{heatmap_boost.pdf}
     \label{fig:lift_boost}
   \end{subfigure}
