--- a/hw5/writeup/conmat_nn1.tex
+++ b/hw5/writeup/conmat_nn1.tex
@@ -1,9 +1,9 @@
 % latex table generated in R 3.2.1 by xtable 1.7-4 package
-% Thu Nov  5 17:05:58 2015
+% Thu Nov  5 17:15:31 2015
 \begin{table}[ht]
 \centering
 \caption{Confusion Matrix for Neural Network} 
-\label{tab:conmat_nnet}
+\label{tab:conmat_nn1}
 \begin{tabular}{l|rrrrrr}
   &\multicolumn{6}{c}{Reference}\\
  \hline
