Updates from ShareLaTeX

--- a/hw5/writeup/conmat_rf.tex
+++ b/hw5/writeup/conmat_rf.tex
@@ -1,6 +1,7 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
 % Wed Nov  4 19:31:53 2015
 \begin{table}[ht]
+\begin{adjustwidth}{-1in}{-1in}
 \centering
 \caption{Confusion Matrix for Random Forest} 
 \label{tab:conmat_rf}
@@ -17,4 +18,5 @@ Walking & 481 &  26 &  20 &   0 &   0 &   0 \\
   Laying &   0 &   0 &   0 &   0 &   0 & 537 \\ 
    \hline
 \end{tabular}
+\end{adjustwidth}
 \end{table}
