--- a/utils/header.tex
+++ b/utils/header.tex
@@ -15,6 +15,7 @@
 \usepackage{titlesec}
 \usepackage{lscape}
 \usepackage{bm}
+\usepackage{chngpage}
 \usepackage[titletoc,toc,title]{appendix}
 
 \lstset{
