--- a/hw5/writeup/overall.tex
+++ b/hw5/writeup/overall.tex
@@ -6,7 +6,7 @@
  \hline
  \textbf{Model} & \textbf{Accuracy} \\
  \hline
- Multinomial Regr. & 95.4\% \\
+ Multinomial Logit & 95.4\% \\
  Random Forest & 94.0\% \\
  Boosting Tree & 94.4\% \\
  \hline
