Updates from ShareLaTeX

--- a/final-project/proposal/proposal.tex
+++ b/final-project/proposal/proposal.tex
@@ -28,7 +28,7 @@ For our final project we will enter a Kaggle contest called \textbf{Facial Keypo
 for a total of 15 features per face. Our submission will be scored by the average root mean square error (RMSE) across all keypoints and images.
 
 \section{Data Set}
-Our data are a set of \num{8832} 96-by-96 grayscale images of tightly cropped portraits (sample images are shown in \cref{fig:sample_faces}). The images have been vectorized and each pixel is represented by its grayscale intensity on a $(0,255)$ scale. For each image, the $(x,y)$ coordinates of each facial keypoint are given, so there are 30 variables to predict for each image. Our models/algorithms will be tested on a testing set of \num{1783} similarly formatted images.
+Our data are a set of \num{8832} 96-by-96 grayscale images of tightly cropped portraits (sample images are shown in \cref{fig:sample_faces}). The images have been vectorized and each pixel is represented by its grayscale intensity on a $(0,255)$ scale. The $(x,y)$ coordinates of all facial keypoints are given, so there are 30 variables to predict for each image. Our models/algorithms will be tested on a testing set of \num{1783} similarly formatted images.
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=3.5in]{sample_faces.pdf}
@@ -40,12 +40,12 @@ Our data are a set of \num{8832} 96-by-96 grayscale images of tightly cropped po
 This project can be thought of in two discrete parts: (1) image preprocessing to reduce the dimensionality of our data set and make our modeling efforts more robust, and (2) a predictive modeling exercise to identify facial keypoints.
 
 \subsection{Image Processing}
-A common practice in other computer vision studies is to use principal components analysis to reduce the dimensionality of the images. In most cases, nearly all the variation across images can be explained with a fraction of the original data set. Rather than defining each image as a vector of length $p=96\cdot96$, we can express it as a linear combination of the first $x$ principal components where $x \ll p$. This process should help reduce the computational burden of the predictive algorithms we need to train and tune.
+A common practice in other computer vision studies is to use principal components analysis to reduce the dimensionality of the images. In most cases, nearly all the variation across images can be explained with a fraction of the original data set. Rather than defining each image as a vector of length $p=96\cdot96$, we can express it as a linear combination of the first $x$ principal components where $x \ll p$. This process should reduce the noise in each vectorized image and increase the accuracy of the predictive algorithms we need to train and tune.
 
 \textbf{TODO (mdelio): drop some domain specific knowledge}
 
 \subsection{Predictive Modeling}
-This project requires training and tuning 30 different predictive regression models, one for each $x$ and $y$ coordinate of all 15 facial features. The following list of models/algorithms is neither exclusive nor exhaustive, but represents our best current estimate of what the final paper might include:
+This project requires training and tuning 30 different predictive algorithms/models, one for each $x$ and $y$ coordinate of all 15 facial features. The following list of models/algorithms is neither exclusive nor exhaustive, but represents our best current estimate of what the final paper might include:
 \begin{itemize}
 \item linear regression with L1/L2 penalization,
 \item nearest neighbor searches,
