Updates from ShareLaTeX

--- a/hw6/writeup/hw6.tex
+++ b/hw6/writeup/hw6.tex
@@ -9,6 +9,16 @@ University of Chicago Booth School of Business}
 \date{\today}
 \maketitle
 
+\section{Data Summary}
+
+The user that has rated the most video games is \texttt{U584295664}; he has rated 53 games. This user is an extreme outlier, as the median user rated only two games and only one other user rated more than 21 games. This behavior makes him approximately 22 standard deviations above the mean.
+
+The game that has been rated most frequently is \texttt{I760611623}; it has been rated 200 times. This game is also an extreme outlier, as the median game has been rated three times and the next most-rated game was rated by only 102 users. The rating profile for this game puts it at approximately 15 standard deviations above the mean.
+
+\section{User Similarity}
+
+\section{Recommendations}
+
 \begin{appendices}
 
 \clearpage
