--- a/hw6/writeup/hw6.tex
+++ b/hw6/writeup/hw6.tex
@@ -3,17 +3,17 @@
 \begin{document}
 
 \title{Machine Learning (41204-01)\\HW \#7}
-\author{Will Clark $\vert$ Matthew DeLio \\
-\texttt{\{will.clark,mdelio\}@chicagobooth.edu} \\
+\author{Will Clark and Matthew DeLio \\
+\textsf{\{will.clark,mdelio\}@chicagobooth.edu} \\
 University of Chicago Booth School of Business}
 \date{\today}
 \maketitle
 
 \section{Data Summary}
 
-The user that has rated the most video games is \texttt{U584295664}; he has rated 53 games. This user is an extreme outlier, as the median user rated only two games and only one other user rated more than 21 games. This behavior makes him approximately 22 standard deviations above the mean. We can see in \cref{fig:histo_users} just how extreme this outlier is (the maximum value is marked with a red line).
+The user that has rated the most video games is \textsf{U584295664}; he has rated 53 games. This user is an extreme outlier, as the median user rated only two games and only one other user rated more than 21 games. This behavior makes him approximately 22 standard deviations above the mean. We can see in \cref{fig:histo_users} just how extreme this outlier is (the maximum value is marked with a red line).
 
-The game that has been rated most frequently is \texttt{I760611623}; it has been rated 200 times. This game is also an extreme outlier, as the median game has been rated three times and the next most-rated game was rated by only 102 users. The rating profile for this game puts it at approximately 15 standard deviations above the mean. We can see in \cref{fig:histo_games} how far from the center of the distribution this game is (the maximum value is again marked in red).
+The game that has been rated most frequently is \textsf{I760611623}; it has been rated 200 times. This game is also an extreme outlier, as the median game has been rated three times and the next most-rated game was rated by only 102 users. The rating profile for this game puts it at approximately 15 standard deviations above the mean. We can see in \cref{fig:histo_games} how far from the center of the distribution this game is (the maximum value is again marked in red).
 
 \begin{figure}
 \centering
@@ -32,25 +32,25 @@ The game that has been rated most frequently is \texttt{I760611623}; it has been
 \end{figure}
 
 \section{User Similarity}
-To find the user most similar to \texttt{U141954350}, we use RecommenderLab's similarity function.  For the \texttt{cosine} method, we can simply feed the raw ratings data into the similarity function with our user in question and get a list of similiarity scores between them and the others.
+To find the user most similar to \textsf{U141954350}, we use RecommenderLab's similarity function.  To compute cosine similarity, we can simply feed the raw ratings data into the similarity function with our user in question, use the argument \textsf{method="cosine"}, and get a list of similarity scores between them and the others.
 
-However, for the \texttt{jaccard} method, we had to "binarize" the ratings.  To do this, we first normalize the data, which attempts to reduce any user-bias by row-centering the data (subtracts the user's mean score from each rating).  With this normalized data, we choose then to use the mean (now 0) as the cutoff between a binary 0/1.  This means that any score above the user's mean is a favorable score (=1), and any below, is a dis-favorable (=0).  This binary data is then fed into the similarity function with the \texttt{jaccard} method which produces similarity scores between the user in question and the others.
+To compute Jaccard similarity, however, we had to "binarize" the ratings.  To do this, we first normalize the data, which attempts to reduce any user bias by row-centering the data (subtracts the user's mean score from each rating).  With this normalized data, we choose then to use the mean (now 0) as the cutoff between a binary 0/1.  This means that any score above the user's mean is a favorable score (\textsf{=1}), and any below, is a unfavorable (\textsf{=0}).  This binary data is then fed into the similarity function with the \textsf{method="jaccard"} argument which produces similarity scores between the user in question and the others.
 
-We attempted to use the \texttt{pearson} method, but ran into issues when calculating the similarity matrix (it returned only NAs).
+%We attempted to use the \textsf{pearson} method, but ran into issues when calculating the similarity matrix (it returned only NAs).
 
-The top-10 scores are listed in \cref{tab:top10}.  These show some good agreement between the two methods with the top-5 matching in exact order.  Furthermore, of the top 10 similar users, 9 appear in both lists.  The closest user to our user in question is \texttt{U887577623}
+The top 10 scores are listed in \cref{tab:top10}.  These show some good agreement between the two methods with the top 5 matching in exact order.  Furthermore, of the top 10 similar users, 9 appear in both lists.  The closest user to our user in question is \textsf{U887577623}
 
 \input{top10.tex}
 
 \section{Recommendations}
 
-To recommend a particular item to our user \texttt{U141954350} we utilize a "popular" recommender (see \vref{lst:code}).  We employ two methods for determining which item to recommend.
+To recommend a particular item to our user \textsf{U141954350} we utilize a ``popular'' recommender (see \vref{lst:code}).  We employ two methods for determining which item to recommend.
 \begin{enumerate}
-\item \textbf{Top-N List};\\Uses the recommender to produce a top-10 list.
-\item \textbf{Top Predicted Ratings}.\\Predicts all ratings for the user, which can then be sorted to produce a top-10 list.
+\item \textbf{Top-N List}\\Uses the recommender to produce a top 10 list based on the most popular items.
+\item \textbf{Top Predicted Ratings}\\Predicts all ratings for the user, which can then be sorted to produce a top-10 list.
 \end{enumerate}
 
-Before beginning this analysis, we would have been surprised if these two lists were drastically different from one another --- they are, at least in theory supposed to produce the items that are "best" for the given user.  However, we find that they produce completely different lists with drastically different predicted ratings (see \cref{tab:topn,tab:highest}).  Likely the algorithms work differently, one using user-similarity to predict a top list (Top-N List) and the other just producing top-ratings with potentially low support (Top Predicted Ratings).  If this is the case, one would expect the Top-N List to represent a more robust list.  Therefore the item that we would recommend to the user is \texttt{I840620023}.
+Before beginning this analysis, we would have been surprised if these two lists were drastically different from one another --- in theory, they are supposed to produce the items that are ``best'' for the given user.  We find, however, that they produce completely different lists with drastically different predicted ratings (see \cref{tab:topn,tab:highest}).  Likely the algorithms work differently, one using user-similarity to predict a top list (Top-N List) and the other just producing top ratings with potentially low support (Top Predicted Ratings).  If this is the case, one would expect the Top-N List to represent a more robust list.  Therefore the item that we would recommend to the user is \textsf{I840620023}.
 
 \input{topn.tex}
 \input{highest.tex}
